<resources>
    <string name="app_name">Logic Gates</string>
    <string name="lgentername">Enter Your Name Below</string>
    <string name="empty"></string>
    <string name="start">Start</string>
    <string name="scoreboard">Score Board</string>
    <string name="welcome">🦾 Welcome Camp‼️</string>
    <string name="ter1">⭕ OFF</string>
    <string name="ter2">⭕ OFF</string>
    <string name="and">🅰️ND</string>
    <string name="or">🅾️R</string>
    <string name="nand">N🅰️ND</string>
    <string name="nor">N🅾️R</string>
    <string name="xor">X🅾️R</string>
    <string name="not">N⭕T</string>
    <string name="next">NEXT ▶️</string>
    <string name="success">Success : 0</string>
    <string name="failure">Failure : 0</string>
    <string name="count">Remaining Turns : 10</string>
</resources>